# fidl

./: README.md  fidl_PETcsv_stack.cxx  fidl_PETcsv_stack2.cxx  fidl_nonlinear.c  fidl_np600_correction.c  fidl_np645_simulation.c  fidl_pca.c  fidl_power120.c  fidl_region_stats.cxx  fidl_regressdiff.c  fidl_rename_contrasts.c  fidl_rename_paths.c  fidl_replace_dsgnmat.c  fidl_rms.cxx  fidl_scratchdir.c  fidl_scrub_frames.cxx  fidl_sim.c  fidl_sim.cxx  fidl_slicetimertxt.cxx
FIDL/fidl/: CMakeLists.txt
FIDL/gsl/: NOTES
R/: 170525cur.r  170526cur.r  170526cur_102sub.r  170601cur_102sub.r  170602cur_102sub.r  170615cur.r  fidl_pcat_prcomp.r
c/: Acond_norm1.c  Agsl_svd.c  AtoATAgsl_svd.c  add_planes.c  alloc.c  anova_header_new.h  anova_header_old.h  assemble_temporal_cov_matrix.c  assign_region_names2.c  assign_region_names2.h  atlas_to_index.c  atlas_to_index.h  atlas_transform.c  betacf.c  bids.cxx  bids.h  box_correction.c  box_correction.h  box_correction_test.c  boynton_contrast.c  boynton_model.c  center_of_mass.c  center_of_mass2.c  center_of_mass2.h  checkOS.c  checkOS.h  check_NaN.c  check_dimensions.cxx  check_dimensions.h  check_glm.c  cifti_getColumn.cxx  cifti_getDimensions.cxx  cifti_getDimensions.h  combinations.c  compute_box_correction.c  compute_boynton.c  compute_chisquare.c  compute_f_cvf.c  compute_glm.c  compute_glm2.c  (+421 more)
idl/: ECATdef.h  Makefile  abort_profile_mode.pro  actmap.pro  add_custom_img.pro  add_scalar.pro  af3d_loci.pro  af3d_loci_plot_symbol.pro  af3d_loci_symbol.pro  analysis_type1.pro  anat222.pro  anat333.pro  apply_linmod_lag.pro  apply_mask.pro  assign_cft_and_scft_new.pro  assign_fi_atlas_pix_and_off.pro  assign_region_names.pro  assoc_4dfp.pro  atlas_to_image_space.pro  atlas_transform.pro  atlas_transform_c.pro  automatch.pro  avg_contrast.pro  box_smoth.pro  brain_mask.pro  brain_mask2.pro  butter_smoth.pro  call_help.pro  cft_and_scft.pro  check_delays.pro  check_glm.pro  check_math_errors.pro  checkbold.pro  checkmprage.pro  checkmprage111.pro  checkos.pro  clip_image.pro  coeff_orthog_poly.pro  colscl_dead.pro  comp_kernels.pro  (+359 more)
